trunk/tests/jastadd/negative/type_errors/L2/4_TypeCheckingForStmt2.ob
MODULE TestModule;
    TYPE t = INTEGER;
BEGIN
    FOR t := 1 TO 2 DO
    END
END TestModule.
